[gd_scene load_steps=51 format=3 uid="uid://s8kapcxfxw28"]

[ext_resource type="Texture2D" uid="uid://hcgf5tnlqdm7" path="res://cultivation_warehouse/texture/bg.png" id="1_lnfni"]
[ext_resource type="Script" path="res://cultivation_warehouse/cultivation_warehouse.gd" id="1_x41sm"]
[ext_resource type="Texture2D" uid="uid://plv2ktgn2vmf" path="res://cultivation_warehouse/texture/空间站.png" id="2_2xesb"]
[ext_resource type="Texture2D" uid="uid://dqfcwkq48edqp" path="res://cultivation_warehouse/texture/培养舱.png" id="3_itr35"]
[ext_resource type="Script" path="res://cultivation_warehouse/warehouse/warehouse.gd" id="5_sdx6l"]
[ext_resource type="Texture2D" uid="uid://binjokofu0i5i" path="res://cultivation_warehouse/texture/mode_switch_button_1.png" id="6_7s4vc"]
[ext_resource type="Script" path="res://cultivation_warehouse/warehouse/CultureMediumArea.gd" id="6_eikrx"]
[ext_resource type="Script" path="res://cultivation_warehouse/prop_container.gd" id="6_idwt6"]
[ext_resource type="Texture2D" uid="uid://pp6q2nyoai54" path="res://cultivation_warehouse/prop_container/texture/左组背板.png" id="6_r8lov"]
[ext_resource type="Texture2D" uid="uid://p0v8owvtib2j" path="res://cultivation_warehouse/control_panel/texture/右组背板.png" id="7_0h8t0"]
[ext_resource type="Shader" path="res://shader/gradual_transition.gdshader" id="7_0wilp"]
[ext_resource type="Script" path="res://cultivation_warehouse/seed_panel.gd" id="7_n4p1t"]
[ext_resource type="Texture2D" uid="uid://bwowrdh432iky" path="res://cultivation_warehouse/prop_container/texture/右翻页.png" id="8_e2o46"]
[ext_resource type="Texture2D" uid="uid://cdegpryvhg6km" path="res://cultivation_warehouse/nutrition_tracker/texture/剩余营养背板.png" id="8_hau4x"]
[ext_resource type="Texture2D" uid="uid://o4haaghg6nfn" path="res://cultivation_warehouse/prop_container/texture/右翻页-暗.png" id="9_atdrd"]
[ext_resource type="Texture2D" uid="uid://c5m7jmqkhn73n" path="res://cultivation_warehouse/prop_container/texture/左翻页.png" id="10_cgo4w"]
[ext_resource type="Texture2D" uid="uid://be2ypdmw47gqy" path="res://cultivation_warehouse/prop_container/texture/左翻页-暗.png" id="11_mbl05"]
[ext_resource type="Texture2D" uid="uid://wx4wr12jy02m" path="res://cultivation_warehouse/prop_container/texture/switch_button/seed_switch_button.png" id="12_funv6"]
[ext_resource type="Texture2D" uid="uid://2coga3ces11x" path="res://cultivation_warehouse/prop_container/texture/switch_button/culture_medium.png" id="13_mdgs6"]
[ext_resource type="Texture2D" uid="uid://oklsroofxe5r" path="res://cultivation_warehouse/prop_container/texture/switch_button/nutrient_solution.png" id="14_1sfjv"]
[ext_resource type="Texture2D" uid="uid://bp2mrmlcna5gg" path="res://cultivation_warehouse/prop_container/texture/switch_button/item.png" id="14_5ip82"]
[ext_resource type="Texture2D" uid="uid://dimh1iwcoxqhp" path="res://cultivation_warehouse/texture/返回.png" id="14_cfiai"]
[ext_resource type="Texture2D" uid="uid://b6hvrj6k0difh" path="res://cultivation_warehouse/texture/返回-暗.png" id="15_15g0b"]
[ext_resource type="Texture2D" uid="uid://cyiam374sp67q" path="res://cultivation_warehouse/texture/状态条背板.png" id="16_u4v2w"]
[ext_resource type="Texture2D" uid="uid://dccsctg6drrie" path="res://main/texture/体力.png" id="17_d03w6"]
[ext_resource type="Texture2D" uid="uid://dhwg63vr8ltqn" path="res://main/texture/货币加号.png" id="18_apixa"]
[ext_resource type="Texture2D" uid="uid://cyb3u45kaemvr" path="res://cultivation_warehouse/texture/主页面.png" id="19_frg43"]
[ext_resource type="Texture2D" uid="uid://b5oebcn51ygif" path="res://cultivation_warehouse/texture/主页面-暗.png" id="20_05ktb"]
[ext_resource type="Script" path="res://cultivation_warehouse/nutrition_tracker_panel.gd" id="20_pxxx2"]
[ext_resource type="Texture2D" uid="uid://biuu8yqdhp02h" path="res://cultivation_warehouse/texture/剩余营养槽填充.png" id="20_s2wa4"]
[ext_resource type="Script" path="res://cultivation_warehouse/culture_medium_panel.gd" id="21_gx6wo"]
[ext_resource type="Script" path="res://cultivation_warehouse/item_panel.gd" id="22_0d4wh"]
[ext_resource type="Script" path="res://cultivation_warehouse/liquid_inlet_area.gd" id="22_ajtvg"]
[ext_resource type="Texture2D" uid="uid://hquqwe7075rg" path="res://cultivation_warehouse/texture/能量槽填充.png" id="23_arvdj"]
[ext_resource type="Texture2D" uid="uid://of7j4c7fpo0h" path="res://cultivation_warehouse/texture/switch/关-暗.png" id="24_pi7gw"]
[ext_resource type="Texture2D" uid="uid://bs0ujhgfkirag" path="res://cultivation_warehouse/texture/switch/关.png" id="24_rvgew"]
[ext_resource type="Texture2D" uid="uid://3kgq4ttk3kx7" path="res://cultivation_warehouse/texture/LED控制滑槽.png" id="25_px6yg"]
[ext_resource type="Script" path="res://cultivation_warehouse/liquid_inlet_switch_button.gd" id="25_vla87"]
[ext_resource type="Texture2D" uid="uid://fryv8kuic0oh" path="res://cultivation_warehouse/texture/滑钮.png" id="26_j38kc"]
[ext_resource type="Script" path="res://cultivation_warehouse/draining_liquid_area.gd" id="27_ugnom"]
[ext_resource type="Script" path="res://cultivation_warehouse/draining_liquid_switch_button.gd" id="28_0m4a1"]
[ext_resource type="Texture2D" uid="uid://ctlvvtnryjx5s" path="res://textures/ui/DialogPanel/游戏失败背板.png" id="41_35r6e"]
[ext_resource type="Texture2D" uid="uid://8ht65ubb03hr" path="res://textures/ui/DialogPanel/重开.png" id="42_6wquw"]
[ext_resource type="Texture2D" uid="uid://go7rocx5iur7" path="res://textures/ui/DialogPanel/重开-暗.png" id="43_ttd7t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bpuxe"]
shader = ExtResource("7_0wilp")
shader_parameter/red_progress = 1.0
shader_parameter/blue_progress = 1.0
shader_parameter/light_red = Vector3(1, 0, 0)
shader_parameter/light_blue = Vector3(0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c00hx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eacvo"]

[sub_resource type="Theme" id="Theme_h5ft6"]
Panel/styles/panel = SubResource("StyleBoxFlat_eacvo")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lvdm"]
bg_color = Color(0.145257, 0.342344, 0.305073, 1)
border_color = Color(0.0145148, 0.124004, 0.173554, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_mutt3"]
line_spacing = 1.0
font_size = 33
outline_size = 5

[node name="CultivationWarehouse" type="Node2D"]
script = ExtResource("1_x41sm")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_lnfni")

[node name="Rom" type="TextureRect" parent="."]
offset_left = 76.0
offset_top = 128.0
offset_right = 1846.0
offset_bottom = 835.0
texture = ExtResource("2_2xesb")
metadata/_edit_use_anchors_ = true

[node name="Warehouse" type="TextureRect" parent="Rom"]
layout_mode = 0
offset_left = 400.0
offset_top = 136.0
offset_right = 1352.0
offset_bottom = 642.0
texture = ExtResource("3_itr35")
script = ExtResource("5_sdx6l")

[node name="CultureMediumArea1" type="Control" parent="Rom/Warehouse"]
anchors_preset = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 201.0
offset_bottom = 302.0
script = ExtResource("6_eikrx")

[node name="CultureMediumArea2" type="Control" parent="Rom/Warehouse"]
anchors_preset = 0
offset_left = 224.0
offset_top = 48.0
offset_right = 394.0
offset_bottom = 304.0
script = ExtResource("6_eikrx")
index = 1

[node name="CultureMediumArea3" type="Control" parent="Rom/Warehouse"]
anchors_preset = 0
offset_left = 400.0
offset_top = 48.0
offset_right = 570.0
offset_bottom = 301.0
script = ExtResource("6_eikrx")
index = 2

[node name="CultureMediumArea4" type="Control" parent="Rom/Warehouse"]
anchors_preset = 0
offset_left = 572.0
offset_right = 742.0
offset_bottom = 301.0
script = ExtResource("6_eikrx")
index = 3

[node name="CultureMediumArea5" type="Control" parent="Rom/Warehouse"]
anchors_preset = 0
offset_left = 748.0
offset_right = 918.0
offset_bottom = 301.0
script = ExtResource("6_eikrx")
index = 4

[node name="ColorRect" type="ColorRect" parent="Rom/Warehouse"]
material = SubResource("ShaderMaterial_bpuxe")
layout_mode = 0
offset_right = 948.0
offset_bottom = 302.0

[node name="ModeSwitchButton" type="TextureButton" parent="."]
offset_left = 865.0
offset_top = 884.0
offset_right = 1044.0
offset_bottom = 1063.0
texture_normal = ExtResource("6_7s4vc")

[node name="PropContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_idwt6")

[node name="Background" type="TextureRect" parent="PropContainer"]
layout_mode = 0
offset_left = 20.0
offset_top = 856.0
offset_right = 1664.0
offset_bottom = 1286.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_r8lov")

[node name="SwitchControl" type="Control" parent="PropContainer"]
anchors_preset = 0
offset_left = 65.0
offset_top = 869.0
offset_right = 781.0
offset_bottom = 907.0

[node name="HBoxContainer" type="HBoxContainer" parent="PropContainer/SwitchControl"]
layout_mode = 0
offset_right = 328.0
offset_bottom = 74.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 40

[node name="SeedButton" type="TextureButton" parent="PropContainer/SwitchControl/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("12_funv6")
stretch_mode = 1

[node name="CultureMediumButton" type="TextureButton" parent="PropContainer/SwitchControl/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("13_mdgs6")
stretch_mode = 1

[node name="NutrientSolutionButton" type="TextureButton" parent="PropContainer/SwitchControl/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("14_1sfjv")
stretch_mode = 1

[node name="ToolButton" type="TextureButton" parent="PropContainer/SwitchControl/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("14_5ip82")
stretch_mode = 1

[node name="SeedPanel" type="Control" parent="PropContainer"]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 915.0
offset_right = 840.0
offset_bottom = 1070.0
script = ExtResource("7_n4p1t")

[node name="RPageTurningButton" type="TextureButton" parent="PropContainer/SeedPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943115
anchor_top = -0.254463
anchor_right = 0.943115
anchor_bottom = -0.254463
offset_left = 0.417908
offset_top = 38.4418
offset_right = 62.4179
offset_bottom = 328.442
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_e2o46")
texture_pressed = ExtResource("9_atdrd")
metadata/_edit_use_anchors_ = true

[node name="LPageTurningButton" type="TextureButton" parent="PropContainer/SeedPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00980392
anchor_top = -0.0129032
anchor_right = 0.00980392
anchor_bottom = -0.0129032
offset_right = 62.0
offset_bottom = 290.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_cgo4w")
texture_pressed = ExtResource("11_mbl05")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PropContainer/SeedPanel"]
layout_mode = 0
offset_left = 48.0
offset_top = -3.0
offset_right = 1472.0
offset_bottom = 287.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 15

[node name="CultureMediumPanel" type="Control" parent="PropContainer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 915.0
offset_right = 840.0
offset_bottom = 1070.0
script = ExtResource("21_gx6wo")

[node name="RPageTurningButton" type="TextureButton" parent="PropContainer/CultureMediumPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943115
anchor_top = -0.254463
anchor_right = 0.943115
anchor_bottom = -0.254463
offset_left = 0.417908
offset_top = 38.4418
offset_right = 62.4179
offset_bottom = 328.442
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_e2o46")
texture_pressed = ExtResource("9_atdrd")
metadata/_edit_use_anchors_ = true

[node name="LPageTurningButton" type="TextureButton" parent="PropContainer/CultureMediumPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00980392
anchor_top = -0.0129032
anchor_right = 0.00980392
anchor_bottom = -0.0129032
offset_right = 62.0
offset_bottom = 290.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_cgo4w")
texture_pressed = ExtResource("11_mbl05")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PropContainer/CultureMediumPanel"]
layout_mode = 0
offset_left = 48.0
offset_top = -3.0
offset_right = 1472.0
offset_bottom = 287.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 15

[node name="NutritionTrackerPanel" type="Control" parent="PropContainer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 915.0
offset_right = 840.0
offset_bottom = 1070.0
script = ExtResource("20_pxxx2")

[node name="RPageTurningButton" type="TextureButton" parent="PropContainer/NutritionTrackerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943115
anchor_top = -0.254463
anchor_right = 0.943115
anchor_bottom = -0.254463
offset_left = 0.417908
offset_top = 38.4418
offset_right = 62.4179
offset_bottom = 328.442
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_e2o46")
texture_pressed = ExtResource("9_atdrd")
metadata/_edit_use_anchors_ = true

[node name="LPageTurningButton" type="TextureButton" parent="PropContainer/NutritionTrackerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00980392
anchor_top = -0.0129032
anchor_right = 0.00980392
anchor_bottom = -0.0129032
offset_right = 62.0
offset_bottom = 290.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_cgo4w")
texture_pressed = ExtResource("11_mbl05")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PropContainer/NutritionTrackerPanel"]
layout_mode = 0
offset_left = 48.0
offset_top = -3.0
offset_right = 1472.0
offset_bottom = 287.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 15

[node name="ItemPanel" type="Control" parent="PropContainer"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("22_0d4wh")

[node name="RPageTurningButton" type="TextureButton" parent="PropContainer/ItemPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 19.8396
anchor_top = 21.889
anchor_right = 19.8396
anchor_bottom = 21.889
offset_left = 0.417908
offset_top = 38.4418
offset_right = 62.4179
offset_bottom = 328.442
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_e2o46")
texture_pressed = ExtResource("9_atdrd")
metadata/_edit_use_anchors_ = true

[node name="LPageTurningButton" type="TextureButton" parent="PropContainer/ItemPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 22.825
anchor_right = 0.8
anchor_bottom = 22.825
offset_right = 62.0
offset_bottom = 290.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_cgo4w")
texture_pressed = ExtResource("11_mbl05")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PropContainer/ItemPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 915.0
offset_right = 1496.0
offset_bottom = 1205.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 15

[node name="ControlPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="ControlPanel"]
layout_mode = 0
offset_left = 1072.0
offset_top = 856.0
offset_right = 1894.0
offset_bottom = 1071.0
texture = ExtResource("7_0h8t0")

[node name="LiquidInletSwitchButton" type="TextureButton" parent="ControlPanel"]
layout_mode = 0
offset_left = 1598.0
offset_top = 907.0
offset_right = 1670.0
offset_bottom = 939.0
texture_normal = ExtResource("24_pi7gw")
script = ExtResource("25_vla87")

[node name="LiquidInletArea" type="Control" parent="ControlPanel"]
anchors_preset = 0
offset_left = 1776.0
offset_top = 894.0
offset_right = 1846.0
offset_bottom = 958.0
script = ExtResource("22_ajtvg")

[node name="DrainingLiquidArea" type="Control" parent="ControlPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 1784.0
offset_top = 968.0
offset_right = 1846.0
offset_bottom = 1032.0
script = ExtResource("27_ugnom")

[node name="DrainingLiquidSwitchButton" type="TextureButton" parent="ControlPanel"]
layout_mode = 0
offset_left = 1598.0
offset_top = 984.0
offset_right = 1670.0
offset_bottom = 1016.0
texture_normal = ExtResource("24_rvgew")
script = ExtResource("28_0m4a1")

[node name="BlueLedScrollBarBg" type="TextureRect" parent="ControlPanel"]
layout_mode = 0
offset_left = 1224.0
offset_top = 993.0
offset_right = 1448.0
offset_bottom = 1017.0
texture = ExtResource("25_px6yg")
stretch_mode = 2

[node name="BlueLedScrollBar" type="HSlider" parent="ControlPanel"]
layout_mode = 0
offset_left = 1224.0
offset_top = 984.0
offset_right = 1447.0
offset_bottom = 1025.0
theme_override_icons/grabber = ExtResource("26_j38kc")
theme_override_icons/grabber_highlight = ExtResource("26_j38kc")
theme_override_icons/grabber_disabled = ExtResource("26_j38kc")
theme_override_styles/slider = SubResource("StyleBoxEmpty_c00hx")
max_value = 10.0

[node name="RedLedScrollBarBg" type="TextureRect" parent="ControlPanel"]
layout_mode = 0
offset_left = 1224.0
offset_top = 914.0
offset_right = 1447.0
offset_bottom = 938.0
texture = ExtResource("25_px6yg")
stretch_mode = 2

[node name="RedLedScrollBar" type="HSlider" parent="ControlPanel"]
layout_mode = 0
offset_left = 1224.0
offset_top = 906.0
offset_right = 1447.0
offset_bottom = 947.0
theme_override_icons/grabber = ExtResource("26_j38kc")
theme_override_icons/grabber_highlight = ExtResource("26_j38kc")
theme_override_icons/grabber_disabled = ExtResource("26_j38kc")
theme_override_styles/slider = SubResource("StyleBoxEmpty_c00hx")
max_value = 10.0

[node name="NutritionTracker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="NutritionTracker"]
layout_mode = 0
offset_left = 1864.0
offset_top = 128.0
offset_right = 1948.0
offset_bottom = 1526.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_hau4x")

[node name="Nutrition" type="Panel" parent="NutritionTracker/Background"]
layout_mode = 0
offset_left = 16.0
offset_top = 224.0
offset_right = 70.0
offset_bottom = 1360.0

[node name="Schedule" type="TextureRect" parent="NutritionTracker/Background/Nutrition"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 51.0
offset_bottom = 1128.0
texture = ExtResource("20_s2wa4")
expand_mode = 1

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 12.0
offset_top = 8.0
offset_right = 568.0
offset_bottom = 123.0
texture_normal = ExtResource("14_cfiai")
texture_pressed = ExtResource("15_15g0b")

[node name="ConsumptionPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ConsumptionPanel"]
layout_mode = 0
offset_left = 632.0
offset_top = 16.0
offset_right = 1904.0
offset_bottom = 220.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_u4v2w")

[node name="Energy" type="Panel" parent="ConsumptionPanel/TextureRect"]
layout_mode = 0
offset_left = 254.0
offset_top = 42.0
offset_right = 1254.0
offset_bottom = 88.0
theme = SubResource("Theme_h5ft6")
theme_override_styles/panel = SubResource("StyleBoxFlat_7lvdm")

[node name="Schedule" type="TextureRect" parent="ConsumptionPanel/TextureRect/Energy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -494.0
offset_top = -20.0
offset_right = 496.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_arvdj")
expand_mode = 1

[node name="Food" type="Panel" parent="ConsumptionPanel/TextureRect"]
layout_mode = 0
offset_left = 254.0
offset_top = 118.0
offset_right = 1254.0
offset_bottom = 164.0
theme = SubResource("Theme_h5ft6")
theme_override_styles/panel = SubResource("StyleBoxFlat_7lvdm")

[node name="Schedule" type="TextureRect" parent="ConsumptionPanel/TextureRect/Food"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -494.0
offset_top = -20.0
offset_right = 496.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_arvdj")
expand_mode = 1

[node name="Electricity" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ElectricityRect" type="TextureRect" parent="Electricity"]
layout_mode = 0
offset_left = 1304.0
offset_top = 8.0
offset_right = 1594.0
offset_bottom = 128.0
texture = ExtResource("17_d03w6")
stretch_mode = 4

[node name="Fitment" type="TextureRect" parent="Electricity/ElectricityRect"]
layout_mode = 0
offset_left = 208.0
offset_top = 20.0
offset_right = 288.0
offset_bottom = 100.0
texture = ExtResource("18_apixa")

[node name="ElectricityLabel" type="Label" parent="Electricity/ElectricityRect"]
layout_mode = 0
offset_left = 110.0
offset_top = 30.0
offset_right = 223.0
offset_bottom = 91.0
text = "00/100"
label_settings = SubResource("LabelSettings_mutt3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HomeButton" type="TextureButton" parent="."]
offset_left = 1768.0
offset_right = 1891.0
offset_bottom = 124.0
texture_normal = ExtResource("19_frg43")
texture_pressed = ExtResource("20_05ktb")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FailureDialogPanel" type="Panel" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="FailureDialogPanel"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -274.0
offset_right = 513.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("41_35r6e")

[node name="ReStartButton" type="TextureButton" parent="FailureDialogPanel/TextureRect"]
layout_mode = 0
offset_left = 369.0
offset_top = 326.0
offset_right = 675.0
offset_bottom = 422.0
texture_normal = ExtResource("42_6wquw")
texture_pressed = ExtResource("43_ttd7t")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ModeSwitchButton" to="." method="_on_mode_switch_button_pressed"]
[connection signal="pressed" from="PropContainer/SwitchControl/HBoxContainer/SeedButton" to="PropContainer" method="_on_seed_button_pressed"]
[connection signal="pressed" from="PropContainer/SwitchControl/HBoxContainer/CultureMediumButton" to="PropContainer" method="_on_culture_medium_button_pressed"]
[connection signal="pressed" from="PropContainer/SwitchControl/HBoxContainer/NutrientSolutionButton" to="PropContainer" method="_on_nutrient_solution_button_pressed"]
[connection signal="pressed" from="PropContainer/SwitchControl/HBoxContainer/ToolButton" to="PropContainer" method="_on_tool_button_pressed"]
[connection signal="pressed" from="PropContainer/SeedPanel/RPageTurningButton" to="PropContainer/SeedPanel" method="_on_r_page_turning_button_pressed"]
[connection signal="pressed" from="PropContainer/SeedPanel/LPageTurningButton" to="PropContainer/SeedPanel" method="_on_l_page_turning_button_pressed"]
[connection signal="pressed" from="PropContainer/NutritionTrackerPanel/RPageTurningButton" to="PropContainer/NutritionTrackerPanel" method="_on_r_page_turning_button_pressed"]
[connection signal="pressed" from="PropContainer/NutritionTrackerPanel/LPageTurningButton" to="PropContainer/NutritionTrackerPanel" method="_on_l_page_turning_button_pressed"]
[connection signal="pressed" from="PropContainer/ItemPanel/RPageTurningButton" to="PropContainer/ItemPanel" method="_on_r_page_turning_button_pressed"]
[connection signal="pressed" from="PropContainer/ItemPanel/LPageTurningButton" to="PropContainer/ItemPanel" method="_on_l_page_turning_button_pressed"]
[connection signal="pressed" from="ControlPanel/LiquidInletSwitchButton" to="." method="_on_liquid_inlet_switch_button_pressed"]
[connection signal="pressed" from="ControlPanel/DrainingLiquidSwitchButton" to="." method="_on_draining_liquid_switch_button_pressed"]
[connection signal="value_changed" from="ControlPanel/BlueLedScrollBar" to="." method="_on_blue_led_scroll_bar_value_changed"]
[connection signal="value_changed" from="ControlPanel/RedLedScrollBar" to="." method="_on_red_led_scroll_bar_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="FailureDialogPanel/TextureRect/ReStartButton" to="." method="_on_re_start_button_pressed"]
